# hello

./: .gitignore  pyproject.toml
hello/scripts/: say_hello.py
